# xmc-ota

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  firmentConfig.cmake  firment_msg_config.json  messages.proto  probes.proto  simpleVersion.cmake  todo.md  toolchain-xmc.cmake  wb_doc.md  wolfBootConfig.cmake
bl/: bl_main.c
firmware/: RTE_Components.h  RTE_DeviceConfig.h  XMC4700x2048.ld  fmt_waveform_cfg.h  frequency.h  fw_update.h  gpio_common.c  gpio_common.h  main.c  project_comms.c  project_comms.h  spi_init.c  spi_init.h  xmc4700.config
firmware/config/: ISR_Config.h  RTE_Components.h  gp_config.h  gpio_pcbDetails.h  ioc_pcbDetails.h  project_comms.h  spi_pcbDetails.h
firmware/wolfBoot_hal/: xmc4700.c
web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css  profiler.ts
